force-app/main/default/objects/amorgan__RaceParticipant__c/amorgan__RaceParticipant__c.object-meta.xml
<CustomObject>
    <label>RaceParticipant</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RaceParticipant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RaceParticipants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>