force-app/main/default/objects/amorgan__RaceParticipant__c/fields/amorgan__Label__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>