force-app/main/default/objects/amorgan__RaceParticipant__c/fields/amorgan__Spectator__c.field-meta.xml
<CustomField>
    <fullName>amorgan__Spectator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>