force-app/main/default/objects/amorgan__RaceParticipant__c/fields/amorgan__User__c.field-meta.xml
<CustomField>
    <fullName>amorgan__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RaceParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>